--- a/index-copy.html
+++ b/index-copy.html
@@ -6,25 +6,106 @@
 	<source src="jacket.mp3" type="audio/mp3">
 	Your browser does not support the audio tag.
 </audio>
-<canvas id="canvas" width=400 height=400></canvas>
+<canvas id="canvas" class="tuner" width=400 height=400></canvas>
 <script type="text/javscript" src="/dsp.js-master/dsp.js"></script>
 <script type="text/javascript" src="jquery.js"></script>
-
 <script>
-	var Tuner = function() {
-//		window.AudioContext = window.webkitAudioContext;
-//		if (!window.AudioContext){
-//			alert("Sorry, not supported!");
-//		}
-//		navigator.getUserMedia = navigator.webkitGetUserMedia;
-//		if (!navigator.getUserMedia){
-//			alert("Sorry, not supported!");
-//		}
+(function() {
+  var Tuner, frequencies, root,
+    __hasProp = {}.hasOwnProperty;
 
+  frequencies = {
+    'A0': 27.5,
+    'A1': 55,
+    'A2': 110,
+    'A3': 220,
+    'A4': 440,
+    'A5': 880,
+    'A6': 1760,
+    'A7': 3520.00,
+    'A#0': 29.1352,
+    'A#1': 58.2705,
+    'A#2': 116.541,
+    'A#3': 233.082,
+    'A#4': 466.164,
+    'A#5': 932.328,
+    'A#6': 1864.66,
+    'A#7': 3729.31,
+    'B0': 30.8677,
+    'B1': 61.7354,
+    'B2': 123.471,
+    'B3': 246.942,
+    'B4': 493.883,
+    'B5': 987.767,
+    'B6': 1975.53,
+    'B7': 3951.07,
+    'C1': 32.7032,
+    'C2': 65.4064,
+    'C3': 130.813,
+    'C4': 261.626,
+    'C5': 523.251,
+    'C6': 1046.50,
+    'C7': 2093,
+    'C8': 4186.01,
+    'C#1': 34.6478,
+    'C#2': 69.2957,
+    'C#3': 138.591,
+    'C#4': 277.183,
+    'C#5': 554.365,
+    'C#6': 1108.73,
+    'C#7': 2217.46,
+    'D1': 36.7081,
+    'D2': 73.4162,
+    'D3': 146.832,
+    'D4': 293.665,
+    'D5': 587.330,
+    'D6': 1174.66,
+    'D7': 2349.32,
+    'D#1': 38.8909,
+    'D#2': 77.7817,
+    'D#3': 155.563,
+    'D#4': 311.127,
+    'D#5': 622.254,
+    'D#6': 1244.51,
+    'D#7': 2489.02,
+    'E1': 41.2034,
+    'E2': 82.4069,
+    'E3': 164.814,
+    'E4': 329.628,
+    'E5': 659.255,
+    'E6': 1318.51,
+    'E7': 2637.02,
+    'F1': 43.6563,
+    'F2': 87.3071,
+    'F3': 174.614,
+    'F4': 349.228,
+    'F5': 698.456,
+    'F6': 1396.91,
+    'F7': 2793.83,
+    'F#1': 46.2493,
+    'F#2': 92.4986,
+    'F#3': 184.997,
+    'F#4': 369.994,
+    'F#5': 739.989,
+    'F#6': 1479.98,
+    'F#7': 2959.96,
+    'G1': 48.9994,
+    'G2': 97.9989,
+    'G3': 195.998,
+    'G4': 391.995,
+    'G5': 783.991,
+    'G6': 1567.98,
+    'G7': 3135.96,
+    'G#1': 51.9131,
+    'G#': 103.826,
+    'G#3': 207.652,
+    'G#4': 415.305,
+    'G#5': 830.609,
+    'G#6': 1661.22,
+    'G#7': 3322.44
+  };
 
-////////////////////////////
-
-//Tuner = function() {
+  Tuner = function() {
     var audioContext, buffer, bufferFillSize, bufferFiller, canvas, context, error, fft, fftSize, gauss, hp, i, lp, sampleRate, success;
     window.AudioContext = (function() {
       return window.AudioContext || window.mozAudioContext || window.webkitAudioContext || window.msAudioContext || window.oAudioContext;
@@ -38,47 +119,49 @@
     if (!navigator.getUserMedia) {
       alert('THIS TUNER REQUIRES THE LATEST BUILD OF CHROME CANARY (23/09/2012) ON MAC WITH "Web Audio Input" ENABLED IN chrome://flags.');
     }
-////////////////////////////
-
-
-
-		var canvas = document.getElementsByTagName('canvas')[0];
-		var context = canvas.getContext('2d');
-
-		var audioContext = new AudioContext();
-		var sampleRate = audioContext.sampleRate;
-		var fftSize = 8192 // see phenomnomnominal.github.com/docs/tuner.html
-		var fft = new FFT(fftSize, sampleRate / 4);
-
-		var buffer = [];
-		for (var i = 0; i<fftSize; i++){
-			buffer.push(0);
-		}
-		var bufferFillSize = 2048;
-		var bufferFiller = audioContext.createJavaScriptNode(bufferFillSize, 1, 1)
-		bufferFiller.onaudioprocess = function(e) {
-			var input = e.inputBuffer.getChannelData(0);
-			for (var i = bufferFillSize; i<buffer.length; i++){
-				buffer[i - bufferFillSize] = buffer[i];
-			}
-			for (var i = 0; i<input.length; i++){
-				buffer[buffer.length - bufferFillSize + i] = input[i];
-			}
-		}
-
-		gauss = new WindowFunction(DSP.GAUSS);
-        lp = audioContext.createBiquadFilter();
-        lp.type = lp.LOWPASS;
-        lp.frequency = 8000;
-        lp.Q = .1;
-        hp = audioContext.createBiquadFilter();
-        hp.type = hp.HIGHPASS;
-        hp.frequency = 20;
-        hp.Q = .1;
-
-        //their stuff copied over
-
-        success = function(stream) {
+    canvas = $('.tuner canvas')[0];
+    $(window).resize(function() {
+      canvas.height = $('.tuner').height();
+      return canvas.width = $('.tuner').width();
+    });
+    $(window).trigger('resize');
+    context = canvas.getContext('2d');
+    audioContext = new AudioContext();
+    sampleRate = audioContext.sampleRate;
+    fftSize = 8192;
+    fft = new FFT(fftSize, sampleRate / 4);
+    buffer = (function() {
+      var _i, _results;
+      _results = [];
+      for (i = _i = 0; 0 <= fftSize ? _i < fftSize : _i > fftSize; i = 0 <= fftSize ? ++_i : --_i) {
+        _results.push(0);
+      }
+      return _results;
+    })();
+    bufferFillSize = 2048;
+    bufferFiller = audioContext.createJavaScriptNode(bufferFillSize, 1, 1);
+    bufferFiller.onaudioprocess = function(e) {
+      var b, input, _i, _j, _ref, _ref1, _results;
+      input = e.inputBuffer.getChannelData(0);
+      for (b = _i = bufferFillSize, _ref = buffer.length; bufferFillSize <= _ref ? _i < _ref : _i > _ref; b = bufferFillSize <= _ref ? ++_i : --_i) {
+        buffer[b - bufferFillSize] = buffer[b];
+      }
+      _results = [];
+      for (b = _j = 0, _ref1 = input.length; 0 <= _ref1 ? _j < _ref1 : _j > _ref1; b = 0 <= _ref1 ? ++_j : --_j) {
+        _results.push(buffer[buffer.length - bufferFillSize + b] = input[b]);
+      }
+      return _results;
+    };
+    gauss = new WindowFunction(DSP.GAUSS);
+    lp = audioContext.createBiquadFilter();
+    lp.type = lp.LOWPASS;
+    lp.frequency = 8000;
+    lp.Q = 0.1;
+    hp = audioContext.createBiquadFilter();
+    hp.type = hp.HIGHPASS;
+    hp.frequency = 20;
+    hp.Q = 0.1;
+    success = function(stream) {
       var display, getPitch, maxPeakCount, maxPeaks, maxTime, noiseCount, noiseThreshold, process, render, src;
       maxTime = 0;
       noiseCount = 0;
@@ -314,17 +397,7 @@
 
   root.Tuner = Tuner;
 
-}.call(this);
-
-        
-
-
-
-
-
-//var getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia;
-
-
+}).call(this);
 </script>
 </body>
 </html>
