Implemented log for mic.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 	Your browser does not support the audio tag.
 </audio>
 -->
-<canvas id="canvas" width=400 height=400></canvas>
+<div class='tuner animate'>
+	<canvas id="canvas" width=400 height=400></canvas>
+</div>
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="underscore.js"></script>
 <script type="text/javascript" src="dsp.js"></script>
-<script type="text/javascript" src="custom.js"></script>
+<script type="text/javascript" src="tuner.js"></script>
 </body>
 </html>
